@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  qtractor-9999.ebuild, metadata.xml:
+  New jacksession and nsm USE flags.
+  qt4-r2 eclass for eqmake4.
+  Some required USE.
+  Autotools variables before inherit.
+
   09 Mar 2013; Dominique Michel <dominique_libre@sourceforge.net>
   qtractor-9999.ebuild: Moved QT depends to dev-qt/*
 
